--- a/A03_SOMA_CODINGTEST/B_16_20/C17_D-14_260221.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C17_D-14_260221.ipynb
@@ -2,26 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 2504 (괄호의 값) - https://www.acmicpc.net/problem/2504\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''(()[[]])([])''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    S = input().strip()\n",
     "\n",
-    "    pass\n",
+    "    stack = []\n",
+    "    answer = 0\n",
+    "    temp = 1\n",
+    "\n",
+    "    for i, char in enumerate(S):\n",
+    "        num_type = 2 if char in ['(', ')'] else 3\n",
+    "\n",
+    "        # 분배법칙 가중치\n",
+    "        if char in ['(', '[']:\n",
+    "            temp *= num_type\n",
+    "            stack.append(char)\n",
+    "\n",
+    "        else:\n",
+    "            pair = '(' if char == ')' else '['\n",
+    "\n",
+    "            # 짝이 다르면\n",
+    "            if not stack or stack[-1] != pair:\n",
+    "                answer = 0\n",
+    "                break\n",
+    "\n",
+    "            # 바로 이전과 짝이 맞으면\n",
+    "            if S[i-1] == pair:\n",
+    "                answer += temp\n",
+    "\n",
+    "            del stack[-1]\n",
+    "            temp //= num_type\n",
+    "\n",
+    "    print(0 if stack else answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,23 +65,56 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2018 (수들의 합 5) - https://www.acmicpc.net/problem/2018\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''15''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())    # 일반항 a 시작, 길이 k , N = a*k + (k*(k-1)))//2\n",
+    "\n",
+    "    if N <= 2:  # 최적화를 위한 종료.\n",
+    "        print(1)\n",
+    "        return\n",
+    "\n",
+    "    right = 1\n",
+    "    left = 1\n",
+    "    cur_sum = 1  # 숫자 하나로 완성되는 값 미리 저장.\n",
+    "    count = 1\n",
+    "\n",
+    "    right_limt = N // 2 + 1   # 2개 더해서 N 만드는 최대 값중 큰 값\n",
+    "    while right <= right_limt:\n",
+    "\n",
+    "        if cur_sum == N:\n",
+    "            count += 1\n",
+    "\n",
+    "        if cur_sum < N:\n",
+    "            right += 1\n",
+    "            cur_sum += right\n",
+    "\n",
+    "        elif cur_sum >= N:\n",
+    "            cur_sum -= left\n",
+    "            left += 1\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,23 +122,39 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 11652 (카드) - https://www.acmicpc.net/problem/11652\n",
     "import sys\n",
+    "from collections import Counter\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "1\n",
+    "2\n",
+    "1\n",
+    "2\n",
+    "1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    count = Counter(int(input()) for _ in range(N))\n",
+    "    print(max(count, key=lambda x: (count[x], -x)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +162,48 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 11497 (통나무 건너뛰기) - https://www.acmicpc.net/problem/11497\n",
     "import sys\n",
+    "from itertools import islice\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "7\n",
+    "13 10 12 11 10 11 12\n",
+    "5\n",
+    "2 4 5 7 9\n",
+    "8\n",
+    "6 6 6 6 6 6 6 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input()) # 작은 것부터 번갈아 양끝에 두는(펜듈럼) 최적 배치\n",
+    "    nums = sorted(map(int, input().split()))\n",
+    "\n",
+    "    pairs = zip(nums, islice(nums, 2, None))\n",
+    "    max_difficulty = max(nxt - cur for cur, nxt in pairs)\n",
+    "\n",
+    "    print(max_difficulty)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -102,7 +212,26 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.2): 상품 별 오프라인 매출 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131533\n",
+    "WITH\n",
+    "    OS AS (\n",
+    "        SELECT \n",
+    "            PRODUCT_ID,\n",
+    "            SUM(SALES_AMOUNT) AS COUNT\n",
+    "        FROM OFFLINE_SALE\n",
+    "        GROUP BY\n",
+    "            PRODUCT_ID\n",
+    "    )\n",
     "\n",
+    "SELECT\n",
+    "    P.PRODUCT_CODE,\n",
+    "    P.PRICE*OS.COUNT AS SALES\n",
+    "FROM OS\n",
+    "JOIN PRODUCT P USING (PRODUCT_ID)\n",
+    "ORDER BY\n",
+    "    SALES DESC,\n",
+    "    PRODUCT_CODE ASC;\n",
     "```"
    ]
   },
@@ -111,23 +240,132 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 19238 (스타트 택시) - https://www.acmicpc.net/problem/19238\n",
     "import sys\n",
+    "from collections import deque\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 3 15\n",
+    "0 0 1 0 0 0\n",
+    "0 0 1 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 1 0\n",
+    "0 0 0 1 0 0\n",
+    "6 5\n",
+    "2 2 5 6\n",
+    "5 4 1 6\n",
+    "4 2 3 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M, O = map(int, input().split())\n",
+    "\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [(0, -1), (0, +1), (-1, 0), (+1, 0)]\n",
+    "\n",
+    "    sr, sc = map(lambda x: int(x) - 1, input().split())     # 인덱스 맞춤\n",
+    "    taxi_info = [sr, sc, O]\n",
+    "\n",
+    "    customers = dict()\n",
+    "    for _ in range(M):\n",
+    "        r, c, gr, gc = map(lambda x: int(x) - 1, input().split())\n",
+    "        customers[(r, c)] = (gr, gc)\n",
+    "\n",
+    "    while customers:                    # 고객이 있는 조건이면 시작.\n",
+    "        r, c, oil = taxi_info\n",
+    "\n",
+    "        candidates = list()\n",
+    "        if (r, c) in customers:         # 현재 택시 위치에 승객이 있으면\n",
+    "            candidates.append((0, r, c))\n",
+    "\n",
+    "        else:                           # 승객을 찾아야 하면.\n",
+    "            visited = set([(r, c)])\n",
+    "            dq = deque([(r, c, 0)])  # (row, col dist)\n",
+    "\n",
+    "            best = float('inf')\n",
+    "            while dq:\n",
+    "                cur_r, cur_c, dist = dq.popleft()\n",
+    "                dist += 1\n",
+    "\n",
+    "                if dist > best:\n",
+    "                    break\n",
+    "\n",
+    "                for dr, dc in directions:\n",
+    "                    nr, nc = cur_r + dr, cur_c + dc\n",
+    "                    nxt = (nr, nc)\n",
+    "                    if 0 <= nr < N and 0 <= nc < N and nxt not in visited and board[nr][nc] == 0:\n",
+    "                        visited.add(nxt)\n",
+    "                        if nxt in customers:\n",
+    "                            heappush(candidates, (dist, nr, nc))\n",
+    "                            if best == float('inf'):\n",
+    "                                best = dist\n",
+    "                        else:\n",
+    "                            dq.append((nr, nc, dist))\n",
+    "\n",
+    "        if not candidates:  # 고객이 있는데도 후보자가 없는 경우, 종료 ( 벽에 막힘 )\n",
+    "            return print(-1)\n",
+    "\n",
+    "        t_to_c_dist, sr, sc = heappop(candidates)\n",
+    "\n",
+    "        oil -= t_to_c_dist\n",
+    "        if oil < 0:             # 손님 태울 기름이 부족.\n",
+    "            return print(-1)\n",
+    "\n",
+    "        taxi_info = [sr, sc, oil]       # 손님 태움\n",
+    "        gr, gc = customers[(sr, sc)]    # 목적지 조사\n",
+    "\n",
+    "        c_to_g_dist = float('inf')\n",
+    "\n",
+    "        # 고객시작지에서 고객 도착지 까지 최단 거리 계산\n",
+    "        visited = set([(sr, sc)])\n",
+    "        dq = deque([(sr, sc, 0)])  # (row, col dist)\n",
+    "\n",
+    "        while dq:\n",
+    "            cur_r, cur_c, dist = dq.popleft()\n",
+    "\n",
+    "            if cur_r == gr and cur_c == gc:\n",
+    "                c_to_g_dist = dist\n",
+    "                break\n",
+    "\n",
+    "            dist += 1\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = cur_r + dr, cur_c + dc\n",
+    "                nxt = (nr, nc)\n",
+    "                if 0 <= nr < N and 0 <= nc < N and nxt not in visited:\n",
+    "                    val = board[nr][nc]\n",
+    "                    if val == 0:\n",
+    "                        visited.add(nxt)\n",
+    "                        dq.append((nr, nc, dist))\n",
+    "\n",
+    "        if c_to_g_dist == float('inf'):\n",
+    "            return print(-1)    # 도착 불가능한 목적지\n",
+    "\n",
+    "        oil -= c_to_g_dist\n",
+    "        if oil < 0:             # 목적지 갈 기름 부족\n",
+    "            return print(-1)\n",
+    "\n",
+    "        taxi_info = [gr, gc, oil + 2*c_to_g_dist]\n",
+    "        del customers[(sr, sc)]\n",
+    "\n",
+    "    print(taxi_info[2])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -135,47 +373,134 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 1890 (점프) - https://www.acmicpc.net/problem/1890\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "2 3 3 1\n",
+    "1 2 1 3\n",
+    "1 2 3 1\n",
+    "3 1 1 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    dp = [[0] * N for _ in range(N)]\n",
+    "    dp[0][0] = 1\n",
+    "\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        cur = dp[r][c]\n",
+    "        jump = board[r][c]\n",
+    "\n",
+    "        if cur == 0 or jump == 0:\n",
+    "            continue\n",
+    "\n",
+    "        nr = r + jump\n",
+    "        if nr < N:\n",
+    "            dp[nr][c] += cur\n",
+    "\n",
+    "        nc = c + jump\n",
+    "        if nc < N:\n",
+    "            dp[r][nc] += cur\n",
+    "\n",
+    "    print(dp[N-1][N-1])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 10026 (적록색약) - https://www.acmicpc.net/problem/10026\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "RRRBB\n",
+    "GGBBB\n",
+    "BBBRR\n",
+    "BBRRR\n",
+    "RRRRR''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [list(input().rstrip()) for _ in range(N)]\n",
+    "    directions = [(+1, 0), (-1, 0), (0, +1), (0, -1)]\n",
+    "\n",
+    "    coords = tuple(product(range(N), repeat=2))\n",
+    "    visited = [[False] * N for _ in range(N)]\n",
+    "\n",
+    "    def find_area(r, c):\n",
+    "        base = board[r][c]\n",
+    "        visited[r][c] = True\n",
+    "        stack = [(r, c)]\n",
+    "\n",
+    "        while stack:\n",
+    "            cur_r, cur_c = stack.pop()\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = cur_r + dr, cur_c + dc\n",
+    "                if 0 <= nr < N and 0 <= nc < N:\n",
+    "                    if not visited[nr][nc] and board[nr][nc] == base:\n",
+    "                        visited[nr][nc] = True\n",
+    "                        stack.append((nr, nc))\n",
+    "\n",
+    "    normal = 0\n",
+    "    for r, c in coords:\n",
+    "        if not visited[r][c]:\n",
+    "            find_area(r, c)\n",
+    "            normal += 1\n",
+    "\n",
+    "    visited = [[False] * N for _ in range(N)]\n",
+    "    for r, c in coords:\n",
+    "        if board[r][c] == 'R':\n",
+    "            board[r][c] = 'G'\n",
+    "\n",
+    "    color_blind = 0\n",
+    "    for r, c in coords:\n",
+    "        if not visited[r][c]:\n",
+    "            find_area(r, c)\n",
+    "            color_blind += 1\n",
+    "\n",
+    "    print(normal, color_blind)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -183,23 +508,78 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "acb\n",
+      "bac\n",
+      "bca\n",
+      "cab\n",
+      "cba\n",
+      "aabc\n",
+      "aacb\n",
+      "abac\n",
+      "abca\n",
+      "acab\n",
+      "acba\n",
+      "baac\n",
+      "baca\n",
+      "bcaa\n",
+      "caab\n",
+      "caba\n",
+      "cbaa\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 6443 (애너그램) - https://www.acmicpc.net/problem/6443\n",
     "import sys\n",
+    "from collections import Counter\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "abc\n",
+    "acba''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    input_str = input().rstrip()\n",
+    "    input_len = len(input_str)\n",
+    "\n",
+    "    count = Counter(input_str)\n",
+    "    sorted_chars = sorted(count)\n",
+    "\n",
+    "    answers = list()\n",
+    "    anagram = [''] * input_len\n",
+    "\n",
+    "    def dfs(length):\n",
+    "\n",
+    "        if length == input_len:\n",
+    "            answers.append(\"\".join(anagram))\n",
+    "            return\n",
+    "\n",
+    "        for char in sorted_chars:\n",
+    "            if count[char] > 0:    # 개수가 남아 있을 때\n",
+    "                count[char] -= 1    # 키가 아닌 value 값은 순회중 수정 가능\n",
+    "                anagram[length] = char\n",
+    "\n",
+    "                dfs(length + 1)\n",
+    "\n",
+    "                # anagram[length] = '' 이거 없어도 됨 (덮어 쓰기 함)\n",
+    "                count[char] += 1\n",
+    "    dfs(0)\n",
+    "    print(\"\\n\".join(answers))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    solve()"
    ]
   },
   {
@@ -208,14 +588,55 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 취소되지 않은 진료 예약 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/132204\n",
+    "WITH \n",
+    "    AP AS (\n",
+    "        SELECT\n",
+    "            APNT_NO,\n",
+    "            PT_NO,\n",
+    "            MCDP_CD,\n",
+    "            APNT_YMD,\n",
+    "            MDDR_ID AS DR_ID\n",
+    "        FROM APPOINTMENT \n",
+    "        WHERE \n",
+    "            DATE_FORMAT(APNT_YMD, '%Y-%m-%d') = '2022-04-13' \n",
+    "            AND IFNULL(APNT_CNCL_YN, 'N') = 'N'\n",
+    "            AND MCDP_CD = 'CS'\n",
+    "    )\n",
+    "SELECT\n",
+    "    AP.APNT_NO,\n",
+    "    PT.PT_NAME,\n",
+    "    AP.PT_NO,\n",
+    "    AP.MCDP_CD,\n",
+    "    DT.DR_NAME,\n",
+    "    AP.APNT_YMD\n",
+    "FROM AP\n",
+    "JOIN PATIENT PT USING (PT_NO)\n",
+    "JOIN DOCTOR DT USING (DR_ID)\n",
+    "ORDER BY\n",
+    "    AP.APNT_YMD ASC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
