--- a/A03_SOMA_CODINGTEST/B_16_20/C18_D-13_260222.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C18_D-13_260222.ipynb
@@ -5,23 +5,45 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 2\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(수학): 백준 11576 (Base Conversion) - https://www.acmicpc.net/problem/11576\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''17 8\n",
+    "2\n",
+    "2 16''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    A, B = map(int, input().split())\n",
+    "    m = input()\n",
+    "    digits = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    a_to_ten = 0\n",
+    "    for digit in digits:  # 호너의 방법\n",
+    "        a_to_ten = a_to_ten * A + digit\n",
+    "\n",
+    "    ten_to_b = []\n",
+    "    while a_to_ten > 0:\n",
+    "        ten_to_b.append(a_to_ten % B)\n",
+    "        a_to_ten //= B\n",
+    "\n",
+    "    print(*reversed(ten_to_b) if ten_to_b else [0])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,47 +51,83 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1850 (최대공약수) - https://www.acmicpc.net/problem/1850\n",
     "import sys\n",
+    "from math import gcd\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    print('1'*gcd(*map(int, input().split())))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vinko\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 10546 (배부른 마라토너) - https://www.acmicpc.net/problem/10546\n",
     "import sys\n",
+    "from collections import Counter\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "marina\n",
+    "josipa\n",
+    "nikola\n",
+    "vinko\n",
+    "filipa\n",
+    "josipa\n",
+    "filipa\n",
+    "marina\n",
+    "nikola''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    attend = Counter(input().rstrip() for _ in range(N))\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(N-1):\n",
+    "        name = input().rstrip()\n",
+    "        if attend[name] == 1:\n",
+    "            del attend[name]\n",
+    "        else:\n",
+    "            attend[name] -= 1\n",
+    "\n",
+    "    print(*attend)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +135,59 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 2138 (전구와 스위치) - https://www.acmicpc.net/problem/2138\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "000\n",
+    "010''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    base = list(map(lambda x: x == '1', input().rstrip()))\n",
+    "    goal = list(map(lambda x: x == '1', input().rstrip()))\n",
+    "\n",
+    "    def push(i, arr):\n",
+    "        for j in [i-1, i, i+1]:\n",
+    "            if 0 <= j < N:\n",
+    "                arr[j] = not arr[j]\n",
+    "\n",
+    "    def simulate(press_first):\n",
+    "        arr = base[:]\n",
+    "        push_cnt = 0\n",
+    "\n",
+    "        if press_first:\n",
+    "            push(0, arr)\n",
+    "            push_cnt += 1\n",
+    "\n",
+    "        for i in range(N-1):\n",
+    "            if arr[i] != goal[i]:       # 맨 앞부터 조사\n",
+    "                push(i + 1, arr)        # 다르면 버튼 누르기\n",
+    "                push_cnt += 1\n",
+    "\n",
+    "        is_possible = arr[N-1] == goal[N-1]     # 마지막 값 조사.\n",
+    "        return push_cnt if is_possible else float('inf')\n",
+    "\n",
+    "    result = min(simulate(True), simulate(False))\n",
+    "    print(result if result != float('inf') else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,7 +196,17 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 고양이와 개는 몇 마리 있을까 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59040\n",
+    "SELECT\n",
+    "    ANIMAL_TYPE,\n",
+    "    COUNT(*) AS count\n",
+    "FROM \n",
+    "    ANIMAL_INS \n",
+    "GROUP BY\n",
+    "    ANIMAL_TYPE\n",
+    "ORDER BY\n",
+    "    ANIMAL_TYPE;\n",
     "```"
    ]
   },
@@ -113,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 17822 (원판 돌리기) - https://www.acmicpc.net/problem/17822\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 17070 (파이프 옮기기 1) - https://www.acmicpc.net/problem/17070\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 1922 (네트워크 연결) - https://www.acmicpc.net/problem/1922\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 1799 (비숍) - https://www.acmicpc.net/problem/1799\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,14 +312,29 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 오프라인/온라인 판매 데이터 통합하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131537\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
