--- a/A03_SOMA_CODINGTEST/B_16_20/C18_D-13_260222.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C18_D-13_260222.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "62fc32a4",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5f85729d",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "9ab6f72b",
    "metadata": {},
    "outputs": [
@@ -212,26 +212,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17822 (원판 돌리기) - https://www.acmicpc.net/problem/17822\n",
     "import sys\n",
+    "from collections import deque\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 6 3\n",
+    "1 2 3 4 5 6\n",
+    "2 3 4 5 6 7\n",
+    "3 4 5 6 7 8\n",
+    "4 5 6 7 8 9\n",
+    "2 1 4\n",
+    "3 0 1\n",
+    "2 1 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, T = map(int, input().split())\n",
+    "    directions = [(0, +1), (+1, 0)]\n",
     "\n",
-    "    pass\n",
+    "    circles = list()\n",
+    "    total_sum = 0\n",
+    "    alive_cnt = N * M\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        dq = deque(map(int, input().split()))\n",
+    "        circles.append(dq)\n",
+    "        total_sum += sum(dq)\n",
+    "\n",
+    "    for _ in range(T):\n",
+    "        x, d, k = map(int, input().split())\n",
+    "        dir = +1 if d == 0 else -1   # 0 시계 방향, 숫자도 시계방향\n",
+    "\n",
+    "        for i in range(x, N+1, x):\n",
+    "            circles[i-1].rotate(k*dir)  # 인덱스 조정\n",
+    "\n",
+    "        will_delete = set()\n",
+    "        for r, c in product(range(N), range(M)):\n",
+    "            val = circles[r][c]\n",
+    "            if val == 0:\n",
+    "                continue\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, (c + dc) % M    # col 만 순환\n",
+    "                if nr < N and circles[nr][nc] == val:\n",
+    "                    will_delete.add((r, c))      # 두 방향 만 조사함으로 넣어줘야 함\n",
+    "                    will_delete.add((nr, nc))\n",
+    "\n",
+    "        if will_delete:\n",
+    "            for r, c in will_delete:\n",
+    "                total_sum -= circles[r][c]\n",
+    "                circles[r][c] = 0\n",
+    "                alive_cnt -= 1\n",
+    "\n",
+    "        elif alive_cnt > 0:\n",
+    "            avg_nums = total_sum / alive_cnt\n",
+    "            for r, c in product(range(N), range(M)):\n",
+    "                val = circles[r][c]\n",
+    "                if val == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                if val > avg_nums:\n",
+    "                    circles[r][c] -= 1\n",
+    "                    total_sum -= 1\n",
+    "                elif val < avg_nums:\n",
+    "                    circles[r][c] += 1\n",
+    "                    total_sum += 1\n",
+    "\n",
+    "    print(total_sum)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -239,23 +306,68 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 17070 (파이프 옮기기 1) - https://www.acmicpc.net/problem/17070\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "0 0 0 0 0 0\n",
+    "0 1 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    # 각각 가로, 세로, 대각\n",
+    "    hori = [[0] * N for _ in range(N)]\n",
+    "    vert = [[0] * N for _ in range(N)]\n",
+    "    diag = [[0] * N for _ in range(N)]\n",
+    "\n",
+    "    hori[0][1] = 1\n",
+    "\n",
+    "    for c in range(2, N):       # 첫 번째 칸은 가로로 만 이동해서 머리 위치 가능.\n",
+    "        if board[0][c] == 1:    # 벽 나오면 바로 중지.\n",
+    "            break\n",
+    "        else:\n",
+    "            hori[0][c] = 1\n",
+    "\n",
+    "    for r, c in product(range(1, N), repeat=2):\n",
+    "\n",
+    "        if board[r][c] == 1:   # 벽이면 머리가 놓일 수 없음\n",
+    "            continue\n",
+    "\n",
+    "        # 최종적으로 가로(hori)\n",
+    "        hori[r][c] = hori[r][c-1] + diag[r][c-1]\n",
+    "\n",
+    "        # 최종적으로 세로(vert)\n",
+    "        vert[r][c] = vert[r-1][c] + diag[r-1][c]\n",
+    "\n",
+    "        # 대각(diag)으로 놓이려면 왼쪽, 위에 도 벽이 없어야 함\n",
+    "        if board[r][c-1] == 0 and board[r-1][c] == 0:\n",
+    "            diag[r][c] = hori[r-1][c-1] + vert[r-1][c-1] + diag[r-1][c-1]\n",
+    "\n",
+    "    print(hori[N-1][N-1] + vert[N-1][N-1] + diag[N-1][N-1])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -263,23 +375,73 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1922 (네트워크 연결) - https://www.acmicpc.net/problem/1922\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "9\n",
+    "1 2 5\n",
+    "1 3 4\n",
+    "2 3 2\n",
+    "2 4 7\n",
+    "3 4 6\n",
+    "3 5 11\n",
+    "4 5 3\n",
+    "4 6 8\n",
+    "5 6 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    M = int(input())\n",
+    "\n",
+    "    parent = list(range(N))\n",
+    "    edges = [tuple(map(int, input().split())) for _ in range(M)]\n",
+    "    edges.sort(key=lambda x: x[2])\n",
+    "\n",
+    "    def find(v):\n",
+    "        if parent[v] != v:\n",
+    "            parent[v] = find(parent[v])\n",
+    "        return parent[v]\n",
+    "\n",
+    "    def union(ra, rb):\n",
+    "        if ra > rb:\n",
+    "            ra, rb = rb, ra\n",
+    "        parent[rb] = ra\n",
+    "\n",
+    "    total_cost = 0\n",
+    "    union_cnt = 0\n",
+    "    \n",
+    "    for a, b, cost in edges:\n",
+    "        ra = find(a-1)\n",
+    "        rb = find(b-1)\n",
+    "\n",
+    "        if ra != rb:\n",
+    "            union(ra, rb)\n",
+    "            total_cost += cost\n",
+    "            union_cnt += 1\n",
+    "\n",
+    "            if union_cnt > N:\n",
+    "                break\n",
+    "\n",
+    "    print(total_cost)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -287,23 +449,84 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1799 (비숍) - https://www.acmicpc.net/problem/1799\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "1 1 0 1 1\n",
+    "0 1 0 0 0\n",
+    "1 0 1 0 1\n",
+    "1 0 0 0 0\n",
+    "1 0 1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [list(input().split()) for _ in range(N)]\n",
+    "\n",
+    "    # 비숍이 대각선 방향에 있나요?\n",
+    "    left_right = [False] * (2*N - 1)\n",
+    "    right_left = [False] * (2*N - 1)\n",
+    "\n",
+    "    blacks = []\n",
+    "    whites = []\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        if board[r][c] == '1':\n",
+    "            if (r + c) % 2 == 0:\n",
+    "                blacks.append((r, c))\n",
+    "            else:\n",
+    "                whites.append((r, c))\n",
+    "\n",
+    "    def put_bishop(r, c, state):\n",
+    "        left_right[r+c] = state\n",
+    "        right_left[r+(N-1-c)] = state\n",
+    "\n",
+    "    def can_put(r, c):\n",
+    "        first = not left_right[r+c]     # 비숍이 없으면 True\n",
+    "        second = not right_left[r+(N-1-c)]\n",
+    "        return first and second\n",
+    "\n",
+    "    def solve_color(emptys):\n",
+    "        max_cnt = 0\n",
+    "\n",
+    "        def dfs(index, bishop_cnt):\n",
+    "            nonlocal max_cnt\n",
+    "\n",
+    "            if index == len(emptys):\n",
+    "                max_cnt = max(max_cnt, bishop_cnt)\n",
+    "                return\n",
+    "\n",
+    "            r, c = emptys[index]\n",
+    "\n",
+    "            if can_put(r, c):\n",
+    "                put_bishop(r, c, True)\n",
+    "                dfs(index + 1, bishop_cnt + 1)\n",
+    "                put_bishop(r, c, False)\n",
+    "\n",
+    "            dfs(index + 1, bishop_cnt)\n",
+    "\n",
+    "        dfs(0, 0)\n",
+    "        return max_cnt\n",
+    "\n",
+    "    print(solve_color(whites) + solve_color(blacks))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -314,6 +537,41 @@
     "```sql\n",
     "-- 5. SQL(Lv.4): 오프라인/온라인 판매 데이터 통합하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/131537\n",
+    "WITH \n",
+    "    ON_OFF AS (\n",
+    "        SELECT\n",
+    "            DATE_FORMAT(SALES_DATE, '%Y-%m-%d') AS SALES_DATE,\n",
+    "            PRODUCT_ID,\n",
+    "            USER_ID,\n",
+    "            SALES_AMOUNT\n",
+    "        FROM\n",
+    "            ONLINE_SALE\n",
+    "        WHERE\n",
+    "            SALES_DATE LIKE '2022-03-%'\n",
+    "        \n",
+    "        UNION ALL\n",
+    "        \n",
+    "        SELECT\n",
+    "            DATE_FORMAT(SALES_DATE, '%Y-%m-%d') AS SALES_DATE,\n",
+    "            PRODUCT_ID,\n",
+    "            NULL AS USER_ID,\n",
+    "            SALES_AMOUNT\n",
+    "        FROM\n",
+    "            OFFLINE_SALE\n",
+    "        WHERE\n",
+    "            SALES_DATE LIKE '2022-03-%'\n",
+    "    )\n",
+    "SELECT\n",
+    "    SALES_DATE,\n",
+    "    PRODUCT_ID,\n",
+    "    USER_ID,\n",
+    "    SALES_AMOUNT\n",
+    "FROM \n",
+    "    ON_OFF\n",
+    "ORDER BY\n",
+    "    SALES_DATE ASC,\n",
+    "    PRODUCT_ID ASC, \n",
+    "    USER_ID ASC;\n",
     "```"
    ]
   }
